--- a/src/input.css
+++ b/src/input.css
@@ -19,3 +19,7 @@
 .btn{
     @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider;
 }
+
+.shadowed{
+    @apply transition ease-out hover:shadow-lg duration-150;
+}
