myprofile loads perfectly

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,16 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile</title>
-    <link href="../dist/output.css" rel="stylesheet">
+    <link href="{{url_for('static', path='app.css')}}" rel="stylesheet">
 
 </head>
 <body class="font-body bg-slate-200 dark:bg-gradient-to-b dark:from-secondary-1 dark:to-primary">
-
-
-
-
-
-
     <div class="">
         <nav class="bg-primary border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900 ">
             <div class="container flex flex-wrap items-center justify-between mx-auto">
