--- a/templates/login.html
+++ b/templates/login.html
@@ -154,7 +154,7 @@
 
         // axios get request
 
-        const inner_call = axios.get("/me", {
+        const inner_call = axios.get("/me/", {
           headers:  {
             "authorization" : `Bearer ${access_tocken_user}`
           }});
