--- a/frontend/fastapi-blog/src/App.css
+++ b/frontend/fastapi-blog/src/App.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 .App {
   text-align: center;
   height: 100%;
@@ -15,7 +20,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  
   min-height: 100vh;
   display: flex;
   flex-direction: column;
